--- a/packages/crud-typeorm/package.json
+++ b/packages/crud-typeorm/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nestjsx/crud-typeorm",
+  "name": "@recalibratedsystems/nestjs-crud-typeorm",
   "description": "NestJs CRUD for RESTful APIs - TypeORM",
   "version": "5.0.0-alpha.3",
   "license": "MIT",
