--- a/package.json
+++ b/package.json
@@ -40,15 +40,15 @@
     }
   },
   "dependencies": {
-    "@nestjs/common": "8.4.3",
-    "@nestjs/core": "8.4.3",
+    "@nestjs/common": "^9.0.11",
+    "@nestjs/core": "^9.0.11",
     "@nestjs/platform-express": "8.4.3",
-    "@nestjs/swagger": "5.2.1",
-    "@nestjs/testing": "8.4.3",
-    "@nestjs/typeorm": "8.0.3",
+    "@nestjs/swagger": "^6.0.5",
+    "@nestjs/testing": "^9.0.8",
+    "@nestjs/typeorm": "^9.0.1",
     "@zmotivat0r/mrepo": "0.8.1",
-    "class-transformer": "0.3.2",
-    "class-validator": "0.13.2",
+    "@nestjs/class-transformer": "0.3.2",
+    "@nestjs/class-validator": "0.13.2",
     "mysql": "2.18.1",
     "pg": "8.7.3",
     "pluralize": "8.0.0",
@@ -57,7 +57,7 @@
     "reflect-metadata": "0.1.13",
     "rxjs": "7.5.5",
     "swagger-ui-express": "4.3.0",
-    "typeorm": "0.2.45"
+    "typeorm": "^0.3.7"
   },
   "devDependencies": {
     "@nuxtjs/opencollective": "0.2.2",
