--- a/packages/crud-request/package.json
+++ b/packages/crud-request/package.json
@@ -47,7 +47,7 @@
     "build": "npx tsc -b"
   },
   "dependencies": {
-    "@nestjsx/util": "^5.0.0-alpha.3",
+    "@recalibratedsystems/nestjs-crud-util": "^5.0.0-alpha.3",
     "qs": "^6.10.3"
   }
 }
