--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,12 +17,12 @@
     "paths": {
       "@nestjsx/crud": ["crud/src"],
       "@nestjsx/crud-typeorm": ["crud-typeorm/src"],
-      "@nestjsx/crud-request": ["crud-request/src"],
-      "@nestjsx/util": ["util/src"],
+      "@recalibratedsystems/nestjs-crud-request": ["crud-request/src"],
+      "@recalibratedsystems/nestjs-crud-util": ["util/src"],
       "@nestjsx/crud/*": ["crud/src/*"],
       "@nestjsx/crud-typeorm/*": ["crud-typeorm/src/*"],
-      "@nestjsx/crud-request/*": ["crud-request/src/*"],
-      "@nestjsx/util/*": ["util/src/*"]
+      "@recalibratedsystems/nestjs-crud-request/*": ["crud-request/src/*"],
+      "@recalibratedsystems/nestjs-crud-util/*": ["util/src/*"]
     }
   },
   "references": [
