--- a/package.json
+++ b/package.json
@@ -25,10 +25,9 @@
     "db:seeds:typeorm": "yarn db:cli:typeorm migration:run -f=orm",
     "db:prepare:typeorm": "yarn db:drop:typeorm && yarn db:sync:typeorm && yarn db:seeds:typeorm",
     "db:prepare:typeorm:mysql": "yarn db:drop:typeorm -c=mysql && yarn db:sync:typeorm -c=mysql && yarn db:seeds:typeorm -c=mysql",
-    "format": "npx pretty-quick --pattern \"packages/**/!(*.d).ts\"",
-    "lint": "npx eslint \"packages/**/!(*.d).ts\" --fix",
+    "format": "prettier --write \"packages/**/src/**/*.ts\" \"integration/**/*.ts\"",
+    "lint": "npx eslint \"packages/**/src/!(*.d).ts\" --fix",
     "commit": "npx git-cz",
-    "postinstall": "npx opencollective",
     "prepare": "npx husky install",
     "release": "mrepo release",
     "release:alpha": "yarn release prerelease --preid alpha --dist-tag alpha",
@@ -40,6 +39,8 @@
     }
   },
   "dependencies": {
+    "@nestjs/class-transformer": "^0.4.0",
+    "@nestjs/class-validator": "^0.13.4",
     "@nestjs/common": "^9.0.11",
     "@nestjs/core": "^9.0.11",
     "@nestjs/platform-express": "^9.0.11",
@@ -47,8 +48,6 @@
     "@nestjs/testing": "^9.0.8",
     "@nestjs/typeorm": "^9.0.1",
     "@zmotivat0r/mrepo": "0.8.1",
-    "@nestjs/class-transformer": "^0.4.0",
-    "@nestjs/class-validator": "^0.13.4",
     "mysql": "2.18.1",
     "pg": "8.7.3",
     "pluralize": "8.0.0",
@@ -65,15 +64,14 @@
     "@types/node": "17.0.23",
     "@types/qs": "6.9.7",
     "@types/supertest": "2.0.12",
-    "@typescript-eslint/eslint-plugin": "4.19.0",
-    "@typescript-eslint/parser": "4.19.0",
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "@typescript-eslint/parser": "^5.31.0",
     "commitizen": "4.2.3",
     "conventional-changelog-cli": "2.1.1",
     "coveralls": "3.1.1",
-    "eslint": "7.22.0",
-    "eslint-config-airbnb-base": "14.2.1",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-import": "2.22.1",
+    "eslint": "^8.22.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "husky": "7.0.4",
     "jest": "27.5.1",
     "jest-extended": "2.0.0",
@@ -83,11 +81,11 @@
     "pretty-quick": "3.1.3",
     "rimraf": "3.0.2",
     "supertest": "6.2.2",
-    "ts-jest": "27.1.4",
-    "ts-node": "10.7.0",
+    "ts-jest": "^28.0.0",
+    "ts-node": "10.9.1",
     "tsconfig-extends": "1.0.1",
-    "tsconfig-paths": "3.14.1",
-    "typescript": "4.6.3"
+    "tsconfig-paths": "4.1.0",
+    "typescript": "^4.9.0-dev.20220828"
   },
   "author": {
     "name": "Michael Yali",
