--- a/packages/crud/package.json
+++ b/packages/crud/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
+  "type": "module",
   "publishConfig": {
     "access": "public"
   },
