--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@recalibratedsystems/nestjs-crud-util",
   "description": "NestJs CRUD for RESTful APIs - util",
-  "version": "5.0.0-alpha.6",
+  "version": "5.0.0-alpha.8",
   "license": "MIT",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
+  "type": "module",
   "publishConfig": {
     "access": "public"
   },
