--- a/lerna.json
+++ b/lerna.json
@@ -4,7 +4,7 @@
   ],
   "npmClient": "yarn",
   "useWorkspaces": true,
-  "version": "5.0.0-alpha.8",
+  "version": "5.0.0",
   "command": {
     "publish": {
       "message": "chore: release"
