--- a/packages/crud-request/package.json
+++ b/packages/crud-request/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@recalibratedsystems/nestjs-crud-request",
   "description": "NestJs CRUD for RESTful APIs - request query builder",
-  "version": "5.0.0-alpha.8",
+  "version": "5.0.0",
   "license": "MIT",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -48,7 +48,7 @@
     "build": "npx tsc -b"
   },
   "dependencies": {
-    "@recalibratedsystems/nestjs-crud-util": "^5.0.0-alpha.6",
+    "@recalibratedsystems/nestjs-crud-util": "^5.0.0",
     "qs": "^6.10.3"
   }
 }
