--- a/packages/crud-typeorm/package.json
+++ b/packages/crud-typeorm/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@recalibratedsystems/nestjs-crud-typeorm",
   "description": "NestJs CRUD for RESTful APIs - TypeORM",
-  "version": "5.0.0-alpha.8",
+  "version": "5.0.0",
   "license": "MIT",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
