--- a/packages/crud/package.json
+++ b/packages/crud/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@recalibratedsystems/nestjs-crud",
   "description": "NestJs CRUD for RESTful APIs",
-  "version": "5.0.0-alpha.8",
+  "version": "5.0.0",
   "license": "MIT",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -40,8 +40,8 @@
     "build": "npx tsc -b"
   },
   "dependencies": {
-    "@recalibratedsystems/nestjs-crud-request": "^5.0.0-alpha.8",
-    "@recalibratedsystems/nestjs-crud-util": "^5.0.0-alpha.6",
+    "@recalibratedsystems/nestjs-crud-request": "^5.0.0",
+    "@recalibratedsystems/nestjs-crud-util": "^5.0.0",
     "deepmerge": "^4.2.2",
     "pluralize": "^8.0.0"
   },
