--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "@zmotivat0r/mrepo": "0.8.1",
     "mysql": "2.18.1",
     "pg": "8.7.3",
-    "pluralize": "8.0.0",
+    "plur": "^5.1.0",
     "qs": "6.10.3",
     "redis": "4.0.4",
     "reflect-metadata": "0.1.13",
