--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "mysql": "2.18.1",
     "pg": "8.7.3",
     "plur": "^5.1.0",
+    "pluralize": "8.0.0",
     "qs": "6.10.3",
     "redis": "4.0.4",
     "reflect-metadata": "0.1.13",
