--- a/packages/crud/package.json
+++ b/packages/crud/package.json
@@ -42,7 +42,8 @@
     "@recalibratedsystems/nestjs-crud-request": "^5.0.6",
     "@recalibratedsystems/nestjs-crud-util": "^5.0.6",
     "deepmerge": "^4.2.2",
-    "plur": "^5.1.0"
+    "plur": "^5.1.0",
+    "pluralize": "8.0.0"
   },
   "peerDependencies": {
     "@nestjs/class-transformer": "*",
